--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,4 @@ target_include_directories(loglib PUBLIC ${CMAKE_CURRENT_LIST_DIR}/inc)
 
 # 设置库输出目录
 message(STATUS "in loglib show CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
-set_target_properties(loglib PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
+# set_target_properties(loglib PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
